--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "^5.67.3",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
