--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
     "@tanstack/react-query": "^5.67.3",
+    "@upstash/redis": "^1.34.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-masonry-css": "^1.0.16",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
