--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.67.3",
     "@upstash/redis": "^1.34.5",
     "canvas-confetti": "^1.9.3",
